[gd_scene load_steps=10 format=2]

[ext_resource path="res://Textures/Entities/BlobPufferfish/Body.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/Entities/BlobPufferfish/BlobPufferfish.gd" type="Script" id=2]
[ext_resource path="res://Components/Collision/Attackbox/Attackbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Components/Collision/Hitbox/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Components/Managers/HealthManager/HealthManager.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[sub_resource type="CircleShape2D" id=2]
radius = 22.0227

[sub_resource type="Animation" id=4]
resource_name = "Death"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ 0.0, -190.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.3, 1 ),
"update": 0,
"values": [ Vector2( 1.3, 1.3 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.0941176, 0.0901961, 0.184314, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.3, 1 ),
"update": 0,
"values": [ Vector2( 1.3, 1.3 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ -40.0, 0.0 ]
}

[node name="BlobPufferfish" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Attackbox" parent="." instance=ExtResource( 3 )]
ignore = NodePath("../Hitbox")
damage = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attackbox"]
shape = SubResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
health_manager = NodePath("../HealthManager")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 4 )
anims/Hit = SubResource( 3 )

[node name="HealthManager" parent="." instance=ExtResource( 5 )]
max_health = 80

[connection signal="on_hit" from="Hitbox" to="." method="_on_Hitbox_on_hit"]
[connection signal="health_depleted" from="HealthManager" to="." method="_on_HealthManager_health_depleted"]
